# Proj2-NGLYD

./: .gitignore  README.md  hodnoceni.txt  skutecnost.txt
calc_pack_generator/: CMakeLists.txt
calc_pack_generator/deployment/: calculator
calc_pack_generator/linux/: calculator.desktop  calculator_icon.xpm
installer/: CMakeLists.txt  profiling-1.0-Linux.deb
installer/linux/: preun
plan/: xfignam00_xmalegt00_xnovakf00_xskovaj00_plan.txt
profiling/: callgrind.out.10  callgrind.out.1000  callgrind.out.1mil  data10.txt  data1000.txt
src/: CMakeLists.txt  Doxyfile  Makefile  mathOperationsTests.cpp  math_operations.cpp  math_operations.h
src/GUI/: CMakeLists.txt  helpwindow.cpp  helpwindow.h  helpwindow.ui  icons.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/LIBS/: CMakeLists.txt  math_operations.cpp  math_operations.h
src/PROFILING/: CMakeLists.txt  profiling.cpp  stddev.cpp  stdev.cpp
src/TESTS/: CMakeLists.txt  mathOperationsTests.cpp
